--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(server
     ../ECS/system/SystemManager.cpp
     ../GameEngine/GameEngine.cpp
 
-    ../../network/UDPServer.cpp
+    ../network/UDPServer.cpp
 )
 
 # Set the output name for the server binary
