:heavy_plus_sign: Adding conf for the display system.

--- a/plugins/bin/systems/configSystems.cfg
+++ b/plugins/bin/systems/configSystems.cfg
@@ -11,5 +11,14 @@ systems = (
         args = {
             path = "./config/config.cfg"
         }
+    },
+    {
+        dir = "",
+        name = "Display",
+        args = {
+            width = 800,
+            height = 800,
+            title = "RType"
+        }
     }
 );
