:wrench: Changed name of executable and added new srcs.

--- a/plugins/bin/systems/configSystems.cfg
+++ b/plugins/bin/systems/configSystems.cfg
@@ -14,7 +14,7 @@ systems = (
     },
     {
         dir = "",
-        name = "Display",
+        name = "Sfml",
         args = {
             width = 800,
             height = 800,
