--- a/plugins/systems/sfml/CMakeLists.txt
+++ b/plugins/systems/sfml/CMakeLists.txt
@@ -1,9 +1,11 @@
 # Add an executable for the server project
-add_library(Display SHARED
+add_library(Sfml SHARED
+    Sfml.cpp
     Display.cpp
+    Input.cpp
 )
 
-target_link_libraries(Display
+target_link_libraries(Sfml
     sfml-graphics
     sfml-window
     sfml-graphics
