--- a/plugins/systems/sfml/CMakeLists.txt
+++ b/plugins/systems/sfml/CMakeLists.txt
@@ -5,6 +5,14 @@ add_library(Sfml SHARED
     Input.cpp
 )
 
+CPMAddPackage(
+    NAME SFML 
+    GIT_REPOSITORY "https://github.com/SFML/SFML.git"
+    GIT_TAG "2.6.1"
+    # OPTIONS
+    # "BUILD_SHARED_LIBS OFF"
+)
+
 target_link_libraries(Sfml
     sfml-graphics
     sfml-window
