:heavy_plus_sign: Added an example of how the controllable component can be defined in the config file.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -20,6 +20,18 @@ entities = (
                     layer = 1
                 }
             },
+            {
+                name = "Controllable",
+                args = {
+                    FORWARD = "W",
+                    BACKWARD = "S",
+                    LEFT = "A",
+                    RIGHT = "D",
+                    ACTION1 = "LEFT_CLICK",
+                    ACTION2 = "RIGHT_CLICK",
+                    ACTION5 = "SPACE"
+                }
+            }
         )
     },
     {
