:heavy_plus_sign: Added all possible components to entity player to showcase whats possible :).

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -31,6 +31,33 @@ entities = (
                     ACTION2 = "RIGHT_CLICK",
                     ACTION5 = "SPACE"
                 }
+            },
+            {
+                name = "Health",
+                args = {
+                    maxVal = 100,
+                    currentVal = 100
+                }
+            },
+            {
+                name = "Collider",
+                args = {
+                    width = 30,
+                    height = 30
+                }
+            },
+            {
+                name = "Velocity",
+                args = {
+                    x = 1,
+                    y = 0
+                }
+            },
+            {
+                name = "Visible",
+                args = {
+                    isVisible = false
+                }
             }
         )
     },
