:heavy_plus_sign: Added new system input to the list of systmes in configSystem file.

--- a/plugins/bin/systems/configSystems.cfg
+++ b/plugins/bin/systems/configSystems.cfg
@@ -2,6 +2,11 @@ systemsPath = "./plugins/bin/systems/";
 systems = (
     {
         dir = "",
+        name = "Input",
+        args = {}
+    },
+    {
+        dir = "",
         name = "Move",
         args = {}
     },
@@ -11,5 +16,5 @@ systems = (
         args = {
             path = "./config/config.cfg"
         }
-    }
+    },
 );
