:heavy_plus_sign: Added new ctor for Acceleration component to showcase its functionnement.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -49,14 +49,24 @@ entities = (
             {
                 name = "Velocity",
                 args = {
-                    x = 1,
-                    y = 0
+                    x = 10,
+                    y = 0,
+                    factor = 100
                 }
             },
             {
                 name = "Visible",
                 args = {
                     isVisible = false
+                }
+            },
+            {
+                name = "Acceleration",
+                args = {
+                    forward = 10,
+                    backward = 5,
+                    left = 5,
+                    right = 5
                 }
             }
         )
@@ -72,6 +82,14 @@ entities = (
                     layer = 1
                 }
             },
+            {
+                name = "Velocity",
+                args = {
+                    x = 10,
+                    y = 5,
+                    factor = 100
+                }
+            }
         )
     },
     {
