:wrench: Small fix in the conf file.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -64,9 +64,9 @@ entities = (
                 name = "Acceleration",
                 args = {
                     forward = 10,
-                    backward = 5,
-                    left = 5,
-                    right = 5
+                    backward = -5,
+                    right = 5,
+                    left = -5
                 }
             }
         )
