:heavy_plus_sign: Added new configurations to the config file.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -23,12 +23,13 @@ entities = (
             {
                 name = "Controllable",
                 args = {
-                    FORWARD = "W",
-                    BACKWARD = "S",
-                    LEFT = "A",
-                    RIGHT = "D",
+                    FORWARD = "D",
+                    BACKWARD = "Q",
+                    LEFT = "Z",
+                    RIGHT = "S",
                     ACTION1 = "LEFT_CLICK",
                     ACTION2 = "RIGHT_CLICK",
+                    ACTION3 = "MIDDLE_CLICK",
                     ACTION5 = "SPACE"
                 }
             },
@@ -49,9 +50,9 @@ entities = (
             {
                 name = "Velocity",
                 args = {
-                    x = 10,
+                    x = 0,
                     y = 0,
-                    factor = 100
+                    factor = 90
                 }
             },
             {
@@ -63,10 +64,16 @@ entities = (
             {
                 name = "Acceleration",
                 args = {
-                    forward = 10,
-                    backward = -5,
-                    right = 5,
-                    left = -5
+                    forward = 2,
+                    backward = -1,
+                    right = 1,
+                    left = -1
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = 0
                 }
             }
         )
