:heavy_plus_sign: Added src filepaths for Key and Action enums.

--- a/plugins/systems/sfml/CMakeLists.txt
+++ b/plugins/systems/sfml/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(Sfml SHARED
     Sfml.cpp
     Display.cpp
     Input.cpp
+    ../../../Keys.cpp
+    ../../../Actions.cpp
 )
 
 CPMAddPackage(
