:wrench: Fix windows compilations.

--- a/plugins/systems/sfml/CMakeLists.txt
+++ b/plugins/systems/sfml/CMakeLists.txt
@@ -18,7 +18,7 @@ CPMAddPackage(
 target_link_libraries(Sfml
     sfml-graphics
     sfml-window
-    sfml-graphics
     sfml-network
+    sfml-system
     ${LIBCONFIG_LIB_NAME}
 )
