:heavy_plus_sign: Added gun to player config

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -75,6 +75,13 @@ entities = (
                 args = {
                     id = 0
                 }
+            },
+            {
+                name = "Gun",
+                args = {
+                    damage = 10,
+                    fireRate = 500
+                }
             }
         )
     },
