--- a/config/config.cfg
+++ b/config/config.cfg
@@ -8,15 +8,45 @@ level = {
     view_port = { x = 1920, y = 1080 },
     goal = "Reach the exit while avoiding enemy patrols."
 },
+templates = (
+    {
+        name = "Enemy",
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1000,
+                    y = 500,
+                    layer = 1
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = 1
+                }
+            },
+            {
+                name = "Velocity",
+                args = {
+                    x = -1,
+                    y = 0,
+                    factor = 100
+                }
+            }
+        )
+    }
+),
 entities = (
     {
         name = "Player",
+        spawnTime = 0,
         components = (
             {
                 name = "Position",
                 args = {
                     x = 0,
-                    y = 0,
+                    y = 500,
                     layer = 1
                 }
             },
@@ -64,7 +94,7 @@ entities = (
             {
                 name = "Acceleration",
                 args = {
-                    forward = 2,
+                    forward = 1,
                     backward = -1,
                     right = 1,
                     left = -1
@@ -79,37 +109,137 @@ entities = (
         )
     },
     {
-        name = "Exit",
+        name = "Enemy1",
+        type = "Enemy",
+        spawnTime = 1000,
+        components = ()
+    },
+    {
+        name = "Enemy2",
+        type = "Enemy",
+        spawnTime = 4000,
         components = (
             {
                 name = "Position",
                 args = {
-                    x = 1000,
-                    y = 0,
+                    x = 500,
+                    y = 750,
+                    layer = 1
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy3",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 500,
+                    y = 250,
+                    layer = 1
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy4",
+        type = "Enemy",
+        spawnTime = 8000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 800,
+                    y = 100,
                     layer = 1
                 }
             },
             {
                 name = "Velocity",
                 args = {
-                    x = 10,
-                    y = 5,
+                    x = -2,
+                    y = 0,
                     factor = 100
                 }
             }
         )
     },
     {
-        name = "Enemy",
+        name = "Enemy5",
+        type = "Enemy",
+        spawnTime = 4000,
         components = (
             {
                 name = "Position",
                 args = {
-                    x = 500,
-                    y = 0,
+                    x = 200,
+                    y = 700,
                     layer = 1
                 }
             },
+            {
+                name = "Velocity",
+                args = {
+                    x = 1,
+                    y = 1,
+                    factor = 100
+                }
+            },
+            {
+                name = "Collider",
+                args = {
+                    width = 30,
+                    height = 30
+                }
+            }
+        )
+    },
+    {
+        name = "Static Enemy",
+        type = "Enemy",
+        spawnTime = 5000,
+        components = (
+            {
+                name = "Velocity",
+                args = {
+                    x = 0,
+                    y = 0,
+                    factor = 0
+                }
+            }
+        )
+    },
+    {
+        name = "EnemyBoss",
+        type = "Enemy",
+        spawnTime = 10000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 0,
+                    y = 200,
+                    layer = 1
+                }
+            },
+            {
+                name = "Health",
+                args = {
+                    maxVal = 200,
+                    currentVal = 200
+                }
+            },
+            {
+                name = "Velocity",
+                args = {
+                    x = 1,
+                    y = 0,
+                    factor = 101
+                }
+            }
         )
     }
 )
