:heavy_plus_sign: Added bulletVelocity to gun for projectile creation, renamed some variables for gun

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -79,8 +79,9 @@ entities = (
             {
                 name = "Gun",
                 args = {
-                    damage = 10,
-                    fireRate = 500
+                    bulletDamage = 10,
+                    fireRate = 500,
+                    bulletVelocity = 8
                 }
             }
         )
