:wrench: Revert cell and view port changes, caused crash

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -3,7 +3,9 @@ level = {
     description = "A peaceful forest area with simple enemies to introduce basic game mechanics.",
     difficulty = "EASY",
     background_music = "forest_theme.mp3",
+    cell_size = 30,
     map_size = { x = 1000, y = 10 },
+    view_port = { x = 1920, y = 1080 },
     goal = "Reach the exit while avoiding enemy patrols."
 },
 templates = (
