--- a/config/config.cfg
+++ b/config/config.cfg
@@ -17,7 +17,7 @@ templates = (
                 args = {
                     x = 1000,
                     y = 500,
-                    layer = 1
+                    layer = 2
                 }
             },
             {
@@ -32,6 +32,14 @@ templates = (
                     x = -1,
                     y = 0,
                     factor = 100
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocity = -5
                 }
             }
         )
@@ -94,10 +102,10 @@ entities = (
             {
                 name = "Acceleration",
                 args = {
-                    forward = 1,
-                    backward = -1,
-                    right = 1,
-                    left = -1
+                    forward = 3,
+                    backward = -3,
+                    right = 3,
+                    left = -3
                 }
             },
             {
@@ -111,7 +119,14 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 500,
-                    bulletVelocity = 8
+                    bulletVelocity = 15
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 150,
+                    height = 150
                 }
             }
         )
@@ -132,7 +147,7 @@ entities = (
                 args = {
                     x = 500,
                     y = 750,
-                    layer = 1
+                    layer = 2
                 }
             }
         )
@@ -147,7 +162,7 @@ entities = (
                 args = {
                     x = 500,
                     y = 250,
-                    layer = 1
+                    layer = 2
                 }
             }
         )
@@ -162,7 +177,7 @@ entities = (
                 args = {
                     x = 800,
                     y = 100,
-                    layer = 1
+                    layer = 2
                 }
             },
             {
@@ -185,7 +200,7 @@ entities = (
                 args = {
                     x = 200,
                     y = 700,
-                    layer = 1
+                    layer = 2
                 }
             },
             {
@@ -201,6 +216,14 @@ entities = (
                 args = {
                     width = 30,
                     height = 30
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 250,
+                    bulletVelocity = 8
                 }
             }
         )
@@ -230,7 +253,7 @@ entities = (
                 args = {
                     x = 0,
                     y = 200,
-                    layer = 1
+                    layer = 2
                 }
             },
             {
@@ -246,6 +269,14 @@ entities = (
                     x = 1,
                     y = 0,
                     factor = 101
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 250,
+                    bulletVelocity = 8
                 }
             }
         )
