:wrench: Updated config to showcase latest changes.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -33,6 +33,13 @@ templates = (
                     y = 0,
                     factor = 100
                 }
+            },
+            {
+                name = "DeathRange",
+                args = {
+                    max = 1920,
+                    min = 0
+                }
             }
         )
     }
