;heavy_plus_sign: Added health and collider component in enemy template and fixed deathrange component to include y and x axis.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -37,8 +37,10 @@ templates = (
             {
                 name = "DeathRange",
                 args = {
-                    max = 1920,
-                    min = 0
+                    maxX = 1920,
+                    maxY = 1080,
+                    minX = 0,
+                    minY = 0
                 }
             },
             {
@@ -47,6 +49,20 @@ templates = (
                     bulletDamage = 10,
                     fireRate = 1000,
                     bulletVelocity = -5
+                }
+            },
+            {
+                name = "Collider",
+                args = {
+                    width = 64,
+                    height = 56
+                }
+            },
+            {
+                name = "Health",
+                args = {
+                    maxVal = 50,
+                    currentVal = 50
                 }
             }
         )
@@ -216,13 +232,6 @@ entities = (
                     x = 1,
                     y = 1,
                     factor = 100
-                }
-            },
-            {
-                name = "Collider",
-                args = {
-                    width = 30,
-                    height = 30
                 }
             },
             {
