:heavy_plus_sign: Added collision system in configServer list of systems.

--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -12,6 +12,11 @@ systems = (
     },
     {
         dir = "",
+        name = "Collision",
+        args = {}
+    },
+    {
+        dir = "",
         name = "Attack",
         args = {}
     },
@@ -22,13 +27,13 @@ systems = (
             path = "./config/config.cfg"
         }
     },
-    {
-        dir = "",
-        name = "Sfml",
-        args = {
-            width = 1920,
-            height = 1080,
-            title = "RType"
-        }
-    },
+    # {
+    #     dir = "",
+    #     name = "Sfml",
+    #     args = {
+    #         width = 1920,
+    #         height = 1080,
+    #         title = "RType"
+    #     }
+    # },
 );
