--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -2,6 +2,26 @@ systemsPath = "./plugins/bin/systems/";
 systems = (
     {
         dir = "",
+        name = "Input",
+        args = {}
+    },
+    {
+        dir = "",
+        name = "Move",
+        args = {}
+    },
+    {
+        dir = "",
+        name = "Collision",
+        args = {}
+    },
+    {
+        dir = "",
+        name = "Attack",
+        args = {}
+    },
+    {
+        dir = "",
         name = "Sfml",
         args = {
             width = 1920,
