:heavy_plus_sign: Added new things to the config to showcase new possibilities.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -23,7 +23,7 @@ templates = (
             {
                 name = "SpriteID",
                 args = {
-                    id = 1
+                    id = "enemy"
                 }
             },
             {
@@ -48,7 +48,8 @@ templates = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 1000,
-                    bulletVelocity = -5
+                    bulletVelocity = -5,
+                    spriteId = "shot2"
                 }
             },
             {
@@ -64,6 +65,12 @@ templates = (
                     maxVal = 50,
                     currentVal = 50
                 }
+            },
+            {
+                name = "Type",
+                args = {
+                    id = 0
+                }
             }
         )
     }
@@ -76,7 +83,7 @@ entities = (
             {
                 name = "Position",
                 args = {
-                    x = 0,
+                    x = 250,
                     y = 500,
                     layer = 2
                 }
@@ -134,7 +141,7 @@ entities = (
             {
                 name = "SpriteID",
                 args = {
-                    id = 0
+                    id = "player"
                 }
             },
             {
@@ -142,7 +149,8 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 500,
-                    bulletVelocity = 15
+                    bulletVelocity = 15,
+                    spriteId = "shot1"
                 }
             },
             {
@@ -150,6 +158,12 @@ entities = (
                 args = {
                     width = 150,
                     height = 150
+                }
+            },
+            {
+                name = "Type",
+                args = {
+                    id = 1
                 }
             }
         )
@@ -168,9 +182,31 @@ entities = (
             {
                 name = "Position",
                 args = {
-                    x = 500,
+                    x = 1700,
                     y = 750,
                     layer = 2
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy2"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 300,
+                    height = 300
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 250,
+                    bulletVelocity = -8,
+                    spriteId = "shot3"
                 }
             }
         )
@@ -183,7 +219,7 @@ entities = (
             {
                 name = "Position",
                 args = {
-                    x = 500,
+                    x = 1800,
                     y = 250,
                     layer = 2
                 }
@@ -239,7 +275,8 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocity = 8
+                    bulletVelocity = 8,
+                    spriteId = "shot4"
                 }
             }
         )
@@ -292,7 +329,41 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocity = 8
+                    bulletVelocity = 20,
+                    spriteId = "shot4"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy3"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 300,
+                    height = 300
+                }
+            }
+        )
+    },
+    {
+        name = "Background",
+        spawnTime = 0,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 960,
+                    y = 540,
+                    layer = 0
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "background"
                 }
             }
         )
