:adhesive_bandage: Little fixes everywhere

--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -1,25 +1,25 @@
 systemsPath = "./plugins/bin/systems/";
 systems = (
-    {
-        dir = "",
-        name = "Input",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Move",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Collision",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Attack",
-        args = {}
-    },
+    # {
+    #     dir = "",
+    #     name = "Input",
+    #     args = {}
+    # },
+    # {
+    #     dir = "",
+    #     name = "Move",
+    #     args = {}
+    # },
+    # {
+    #     dir = "",
+    #     name = "Collision",
+    #     args = {}
+    # },
+    # {
+    #     dir = "",
+    #     name = "Attack",
+    #     args = {}
+    # },
     {
         dir = "",
         name = "Sfml",
