--- a/config/config.cfg
+++ b/config/config.cfg
@@ -71,6 +71,13 @@ templates = (
                 args = {
                     id = 0
                 }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 300,
+                    height = 300
+                }
             }
         )
     }
@@ -95,7 +102,7 @@ entities = (
                     BACKWARD = "Q",
                     LEFT = "Z",
                     RIGHT = "S",
-                    ACTION1 = "LEFT_CLICK",
+                    ACTION1 = "SPACE",
                     ACTION2 = "RIGHT_CLICK",
                     ACTION3 = "MIDDLE_CLICK",
                     ACTION5 = "SPACE"
@@ -132,10 +139,10 @@ entities = (
             {
                 name = "Acceleration",
                 args = {
-                    forward = 3,
-                    backward = -3,
-                    right = 3,
-                    left = -3
+                    forward = 5,
+                    backward = -5,
+                    right = 5,
+                    left = -5
                 }
             },
             {
@@ -147,17 +154,17 @@ entities = (
             {
                 name = "Gun",
                 args = {
-                    bulletDamage = 10,
-                    fireRate = 500,
-                    bulletVelocity = 15,
+                    bulletDamage = 50,
+                    fireRate = 25,
+                    bulletVelocity = 20,
                     spriteId = "shot1"
                 }
             },
             {
                 name = "Scale",
                 args = {
-                    width = 150,
-                    height = 150
+                    width = 300,
+                    height = 300
                 }
             },
             {
@@ -207,6 +214,43 @@ entities = (
                     fireRate = 250,
                     bulletVelocity = -8,
                     spriteId = "shot3"
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy9",
+        type = "Enemy",
+        spawnTime = 8000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1700,
+                    y = 200,
+                    layer = 2
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy2"
+                }
+            },
+            {
+                name = "Scale",
+                args = {
+                    width = 300,
+                    height = 300
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 250,
+                    bulletVelocity = -8,
+                    spriteId = "shot2"
                 }
             }
         )
