:wrench: Added Behavior system to system config list and Ai component to enemies in config

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -35,6 +35,12 @@ templates = (
                 }
             },
             {
+                name = "Ai",
+                args = {
+                    behavior = 0
+                }
+            },
+            {
                 name = "DeathRange",
                 args = {
                     maxX = 1920,
@@ -222,6 +228,12 @@ entities = (
                     x = 1800,
                     y = 250,
                     layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 1
                 }
             }
         )
