--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -22,18 +22,23 @@ systems = (
     },
     {
         dir = "",
+        name = "Behavior",
+        args = {}
+    },
+    {
+        dir = "",
         name = "Config",
         args = {
             path = "./config/config.cfg"
         }
     },
-    # {
-    #     dir = "",
-    #     name = "Sfml",
-    #     args = {
-    #         width = 1920,
-    #         height = 1080,
-    #         title = "RType"
-    #     }
-    # },
+    {
+        dir = "",
+        name = "Sfml",
+        args = {
+            width = 1920,
+            height = 1080,
+            title = "RType"
+        }
+    },
 );
