:recycle: Updated client sfml config file

--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -26,7 +26,8 @@ systems = (
         args = {
             width = 1920,
             height = 1080,
-            title = "RType"
+            title = "RType",
+            texturesPath = "./config/textures.cfg"
         }
     },
 );
