--- a/plugins/systems/sfml/CMakeLists.txt
+++ b/plugins/systems/sfml/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Specify the C++ standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 # Add an executable for the server project
 add_library(Sfml SHARED
     Sfml.cpp
