:heavy_plus_sign: Removed code duplication by adding a new templaed function to create a component from a type and a list of args and a function to create a projectile.

--- a/plugins/systems/attack/CMakeLists.txt
+++ b/plugins/systems/attack/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add an executable for the server project
 add_library(Attack SHARED
     Attack.cpp
+    ../../../src/utils/Projectile.cpp
 )
 
 target_link_libraries(Attack
