:wrench: Modified config to have a visual display

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -185,7 +185,14 @@ entities = (
         name = "Enemy1",
         type = "Enemy",
         spawnTime = 1000,
-        components = ()
+        components = (
+            {
+                name = "Ai"
+                args = {
+                    behavior = 2
+                }
+            }
+        )
     },
     {
         name = "Enemy2",
