--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -38,7 +38,8 @@ systems = (
         args = {
             width = 1920,
             height = 1080,
-            title = "RType"
+            title = "RType",
+            texturesPath = "./config/textures.cfg"
         }
     },
 );
