:heavy_plus_sign: Added a texture for shooting enemies.

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -120,14 +120,33 @@ textures = (
     },
     {
         name = "enemy",
-        type = "animated",
-        path = "./assets/spsheet1.png",
-        textureRect = {
-            x = 33,
-            y = 36,
-        },
-        updateRate = 100,
-        repeat = true
+        type = "actions",
+        actions = (
+            {
+                action = "IDLE",
+                type = "animated",
+                path = "./assets/spsheet1.png",
+                textureRect = {
+                    x = 33,
+                    y = 36,
+                },
+                updateRate = 100,
+                repeat = true,
+                resetBeforeEnd = false,
+            },
+            {
+                action = "SHOOT_FORWARD",
+                type = "animated",
+                path = "./assets/spsheet1shoot.png",
+                textureRect = {
+                    x = 33,
+                    y = 36,
+                },
+                updateRate = 100,
+                repeat = true,
+                resetBeforeEnd = false,
+            }
+        )
     },
     {
         name = "enemy2",
