--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ project(R-Type VERSION 1.0)
 
 # Specify the C++ standard
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(BINARY_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/../bin)
 
