--- a/plugins/systems/attack/CMakeLists.txt
+++ b/plugins/systems/attack/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Specify the C++ standard
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Add an executable for the server project
 add_library(Attack SHARED
