:heavy_plus_sign: Added the shaders file path config setting.

--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -27,7 +27,8 @@ systems = (
             width = 1920,
             height = 1080,
             title = "RType",
-            texturesPath = "./config/textures.cfg"
+            texturesPath = "./config/textures.cfg",
+            shadersPath = "./config/shaders.cfg",
         }
     },
 );
