:heavy_plus_sign: Added the possibility to use a default shader on the sfml system.

--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -29,6 +29,7 @@ systems = (
             title = "RType",
             texturesPath = "./config/textures.cfg",
             shadersPath = "./config/shaders.cfg",
+            defaultShader = "protanopia",
         }
     },
 );
