:wrench: Modified default shader to be 'default'

--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -29,7 +29,7 @@ systems = (
             title = "RType",
             texturesPath = "./config/textures.cfg",
             shadersPath = "./config/shaders.cfg",
-            defaultShader = "protanopia",
+            defaultShader = "default", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
         }
     },
 );
