:heavy_plus_sign: Zig zag pattern now uses death range to set a row in which the AI will bounce around

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -309,6 +309,12 @@ entities = (
                     y = 0,
                     factor = 100
                 }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 3
+                }
             }
         )
     },
