--- a/config/config.cfg
+++ b/config/config.cfg
@@ -347,6 +347,33 @@ entities = (
                     bulletVelocity = 8,
                     spriteId = "shot4"
                 }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 4
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy6",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1800,
+                    y = 250,
+                    layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 5
+                }
             }
         )
     },
