:heavy_plus_sign: 6th behavior is to go back and forth on the x axis

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -364,6 +364,27 @@ entities = (
             {
                 name = "Position",
                 args = {
+                    x = 800,
+                    y = 150,
+                    layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 6
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy6",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
                     x = 1800,
                     y = 250,
                     layer = 2
