:wrench: Created an entity to test every behavior movement

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -378,7 +378,7 @@ entities = (
         )
     },
     {
-        name = "Enemy6",
+        name = "Enemy7",
         type = "Enemy",
         spawnTime = 2000,
         components = (
@@ -394,6 +394,90 @@ entities = (
                 name = "Ai",
                 args = {
                     behavior = 5
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy8",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 100,
+                    y = 250,
+                    layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 7
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy9",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 500,
+                    y = 250,
+                    layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 8
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy10",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 900,
+                    y = 250,
+                    layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 9
+                }
+            }
+        )
+    },
+    {
+        name = "Enemy11",
+        type = "Enemy",
+        spawnTime = 2000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1400,
+                    y = 250,
+                    layer = 2
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = 10
                 }
             }
         )
