:wrench: Changed bullet velocity to bulletvelocityX in config, restoring proper projectile direction for all projectiles

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -54,7 +54,7 @@ templates = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 1000,
-                    bulletVelocity = -5,
+                    bulletVelocityX = -5,
                     spriteId = "shot2"
                 }
             },
@@ -162,7 +162,7 @@ entities = (
                 args = {
                     bulletDamage = 50,
                     fireRate = 25,
-                    bulletVelocity = 20,
+                    bulletVelocityX = 20,
                     spriteId = "shot1"
                 }
             },
@@ -225,7 +225,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocity = -8,
+                    bulletVelocityX = -8,
                     spriteId = "shot3"
                 }
             }
@@ -262,7 +262,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocity = -8,
+                    bulletVelocityX = -8,
                     spriteId = "shot2"
                 }
             }
@@ -344,7 +344,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocity = 8,
+                    bulletVelocityX = 8,
                     spriteId = "shot4"
                 }
             },
@@ -530,7 +530,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocity = 20,
+                    bulletVelocityX = 20,
                     spriteId = "shot4"
                 }
             },
