:wrench: Config file now uses both bulletVelocityX/Y

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -55,6 +55,7 @@ templates = (
                     bulletDamage = 10,
                     fireRate = 1000,
                     bulletVelocityX = -5,
+                    bulletVelocityY = 0,
                     spriteId = "shot2"
                 }
             },
@@ -163,6 +164,7 @@ entities = (
                     bulletDamage = 50,
                     fireRate = 25,
                     bulletVelocityX = 20,
+                    bulletVelocityY = 0,
                     spriteId = "shot1"
                 }
             },
@@ -226,6 +228,7 @@ entities = (
                     bulletDamage = 10,
                     fireRate = 250,
                     bulletVelocityX = -8,
+                    bulletVelocityY = 0,
                     spriteId = "shot3"
                 }
             }
@@ -263,6 +266,7 @@ entities = (
                     bulletDamage = 10,
                     fireRate = 250,
                     bulletVelocityX = -8,
+                    bulletVelocityY = 0,
                     spriteId = "shot2"
                 }
             }
@@ -345,6 +349,7 @@ entities = (
                     bulletDamage = 10,
                     fireRate = 250,
                     bulletVelocityX = 8,
+                    bulletVelocityY = 0,
                     spriteId = "shot4"
                 }
             },
@@ -374,7 +379,17 @@ entities = (
                 args = {
                     behavior = 6
                 }
-            }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 5,
+                    spriteId = "shot2"
+                }
+            },
         )
     },
     {
@@ -416,7 +431,17 @@ entities = (
                 args = {
                     behavior = 7
                 }
-            }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 5,
+                    spriteId = "shot2"
+                }
+            },
         )
     },
     {
@@ -437,7 +462,17 @@ entities = (
                 args = {
                     behavior = 8
                 }
-            }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 8,
+                    spriteId = "shot2"
+                }
+            },
         )
     },
     {
@@ -458,7 +493,17 @@ entities = (
                 args = {
                     behavior = 9
                 }
-            }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 5,
+                    spriteId = "shot2"
+                }
+            },
         )
     },
     {
@@ -479,7 +524,17 @@ entities = (
                 args = {
                     behavior = 10
                 }
-            }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 8,
+                    spriteId = "shot2"
+                }
+            },
         )
     },
     {
@@ -531,6 +586,7 @@ entities = (
                     bulletDamage = 10,
                     fireRate = 250,
                     bulletVelocityX = 20,
+                    bulletVelocityY = 0,
                     spriteId = "shot4"
                 }
             },
